--- a/index.html
+++ b/index.html
@@ -3,47 +3,88 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0">
   <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 
 <body>
 
-    <nav>
-      <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">Logo</a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-        <ul class="right hide-on-med-and-down">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">Javascript</a></li>
-          <li><a href="mobile.html">Mobile</a></li>
-        </ul>
-        <ul class="side-nav" id="mobile-demo">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">Javascript</a></li>
-          <li><a href="mobile.html">Mobile</a></li>
-        </ul>
-      </div>
-    </nav>
-  
-    <div class="container">
-    <div class="row" id="row1">
-      <div class="col s12 m5">
-        <div class="card-panel teal">
-          <span class="white-text">I am a very simple card. I am good at containing small bits of information.
-            I am convenient because I require little markup to use effectively. I am similar to what is called a panel in
-            other frameworks.
-          </span>
+  <div class="col mainHeight">
+
+    <div class="row">
+      <nav>
+        <div class="nav-wrapper">
+          <a href="#!" class="brand-logo">Logo</a>
+          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="sass.html">Sass</a></li>
+            <li><a href="badges.html">Components</a></li>
+            <li><a href="collapsible.html">Javascript</a></li>
+            <li><a href="mobile.html">Mobile</a></li>
+          </ul>
+          <ul class="side-nav" id="mobile-demo">
+            <li><a href="sass.html">Quiz</a></li>
+            <li><a href="badges.html">About Us</a></li>
+            <li><a href="collapsible.html">Sign Up</a></li>
+            <li><a href="mobile.html">Mobile</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+
+    <div class="row" id="row2Margin">
+      <div class="row" id="row1">
+        <div class="col s12 m12" id="mainBox">
+          <div class="card-panel teal cardSize">
+            <span class="white-text">I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively. I am similar to what is called a panel
+              in
+              other frameworks.
+            </span>
+          </div>
         </div>
       </div>
     </div>
-    </div>
+  
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <div class="row">
+      <div class="col s7 m7 test">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus reprehenderit id, similique eum ipsam fugiat dicta enim sed tempore blanditiis modi soluta quam nam veritatis, facilis cupiditate, animi veniam quidem.
+        Explicabo qui id tempore, non corporis illum iure, tenetur eum quibusdam dolore eaque consequatur maiores eveniet veritatis dicta minima tempora sequi dignissimos corrupti repellat nobis aperiam voluptatibus. Officia, sunt in!
+        Vitae officia vero deleniti nesciunt esse dolores consequatur, itaque quos id velit quas assumenda quae, beatae quis repellendus at fuga dicta. Animi ipsum aliquid aperiam qui voluptatum doloremque similique optio?
+        Fugiat consequuntur voluptatibus maxime nostrum, magni harum hic voluptatum, deserunt sit quaerat, iste ad molestias pariatur aliquam. Animi id et quasi recusandae, hic, ut nihil culpa quaerat minus sunt a!
+        Quo praesentium enim repellat laboriosam. Nobis eum magni, provident hic laboriosam optio! Ipsa sint eaque laboriosam beatae quae aperiam animi nemo aliquam nesciunt distinctio omnis amet, veniam ipsam commodi placeat.</p>
+      </div>
+      <div class="col s5 m5 test">
+          <div class="carousel carousel-slider center">
+            <div class="carousel-fixed-item center">
+              <a class="btn waves-effect white grey-text darken-text-2">button</a>
+            </div>
+            <div class="carousel-item red white-text" href="#one!">
+              <h2>First Panel</h2>
+              <p class="white-text">This is your first panel</p>
+            </div>
+            <div class="carousel-item amber white-text" href="#two!">
+              <h2>Second Panel</h2>
+              <p class="white-text">This is your second panel</p>
+            </div>
+            <div class="carousel-item green white-text" href="#three!">
+              <h2>Third Panel</h2>
+              <p class="white-text">This is your third panel</p>
+            </div>
+            <div class="carousel-item blue white-text" href="#four!">
+              <h2>Fourth Panel</h2>
+              <p class="white-text">This is your fourth panel</p>
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./script.js"></script>
 </body>
 
