--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
       </nav>
     </div>
-
+<!-- 
     <div class="switch">
       <label>
         Dont allow
@@ -53,7 +53,7 @@
         <span class="lever"></span>
         Allow Location
       </label>
-    </div>
+    </div> -->
 
     <div class="container-fliud padding">
     <div class="row">
@@ -66,13 +66,19 @@
 
       <div id="playlist" class=" column col-md-6 right">
         <!-- <h2>Column 2</h2>  -->
+        <button id ="find-me" class="button">Find my location</button><br/>
+              <p id = "status"></p>
+              <a id = "map-link" target="_blank"></a>
         <form class="padding">
           <h3>Get a Playlist</h3>
           <p>
-            <h3></h3>
+        
             <label for="city">Please enter your first name: </label>
             <input type="text" name="name" id="name">
             <label for="city">Please enter your city: </label>
+            <!-- <button id ="find-me" class="button">Find my location</button><br/>
+              <p id = "status"></p>
+              <a id = "map-link" target="_blank"></a> -->
             <input type="text" name="city" id="city">
             <label for="city">Please enter your mood: </label>
             <br>
@@ -89,11 +95,9 @@
             <label for="hyped">Hyped</label><br><br>
             <button id="submit">Sumbit</button>
         </form>
-        <p>Some text..</p>
       </div>
     </div>
   </div>
-
 
 
 
