--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="row">
       <nav>
         <div class="nav-wrapper">
-          <a href="#!" class="brand-logo">Logo</a>
+          <a href="#!" class="brand-logo"><img src="./images/logo.png" alt="Sensify">Sensify</a>
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="sass.html">Sass</a></li>
