--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <input type="text" name="city" id="city" class="validate">
             <label for="city" id="cityLabel">City</label>
           </div>
-          <button id ="find-me" class="btn-large waves-effect allBtns">Enable Location</button>
+          <button id ="find-me" class="btn-large waves-effect allBtns">Find My Location</button>
           <p id ="status"></p>
           <a id ="map-link" target="_blank"></a>
 
@@ -95,7 +95,7 @@
         <h2>Current Weather: <span id="currentCity"></span></h2>
       </section>
     </main>
-    
+
     <!-- jQuery if needed -->
     <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>
     
