--- a/index.html
+++ b/index.html
@@ -92,6 +92,66 @@
         </form>
         <div id="requireAll"></div>
       </section>
+      <section id="lyricsModal1" class="modal">
+        <div class="modal-content">
+          <h4 id="song1" class="songTitles"></h4>
+          <p id="lyrics1" class="lyrics">hellllllllll</p>
+        </div>
+      </section>
+      <section id="lyricsModal2" class="modal">
+        <div class="modal-content">
+          <h4 id="song2" class="songTitles"></h4>
+          <p id="lyrics2" class="lyrics"></p>
+        </div>
+      </section>
+      <section id="lyricsModal3" class="modal">
+        <div class="modal-content">
+          <h4 id="song3" class="songTitles"></h4>
+          <p id="lyrics3" class="lyrics"></p>
+        </div>
+      </section>
+      <section id="lyricsModal4" class="modal">
+        <div class="modal-content">
+          <h4 id="song4" class="songTitles"></h4>
+          <p id="lyrics4" class="lyrics"></p>
+        </div>
+      </section>
+      <section id="lyricsModal5" class="modal">
+        <div class="modal-content">
+          <h4 id="song5" class="songTitles"></h4>
+          <p id="lyrics5" class="lyrics"></p>  
+        </div>
+      </section>
+      <section id="lyricsModal6" class="modal">
+        <div class="modal-content">
+          <h4 id="song6" class="songTitles"></h4>
+          <p id="lyrics6" class="lyrics"></p>
+        </div>
+      </section>
+      <section id="lyricsModal7" class="modal">
+        <div class="modal-content">
+          <h4 id="song7" class="songTitles"></h4>
+          <p id="lyrics7" class="lyrics"></p>
+        </div>
+      </section>
+      <section id="lyricsModal8" class="modal">
+        <div class="modal-content">
+          <h4 id="song8" class="songTitles"></h4>
+          <p id="lyrics8" class="lyrics"></p>
+        </div>
+      </section>
+      <section id="lyricsModal9" class="modal">
+        <div class="modal-content">
+          <h4 id="song9" class="songTitles"></h4>
+          <p id="lyrics9" class="lyrics"></p>
+        </div>
+      </section>
+      <section id="lyricsModal10" class="modal">
+        <div class="modal-content">
+          <h4 id="song10" class="songTitles"></h4>
+          <p id="lyrics10" class="lyrics"></p>
+        </div>
+      </section>
       <!-- <section id="lyricsSection" class="col s12 m4 l4">
         <br>
         <div class="row">
