cleanup, added footer

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
         </form>
         <div id="requireAll"></div>
       </section>
+
+      <!-- all lyric modals, hidden until triggered-->
       <section id="lyricsModal1" class="modal">
         <div class="modal-content">
           <h4 id="song1" class="songTitles"></h4>
@@ -152,21 +154,6 @@
           <p id="lyrics10" class="lyrics"></p>
         </div>
       </section>
-      <!-- <section id="lyricsSection" class="col s12 m4 l4">
-        <br>
-        <div class="row">
-          <div class="col s12 m6">
-            <div class="card">
-              <div class="card-image">
-                <img src="images/Lyrics.JPG">
-              </div>
-              <div class="card-content">
-                <p id="lyrics">Lyrics</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
 
       <!-- Show weather data for the city/current location -->
       <section id="weather" class="col s12 m4 l4 center-align">
@@ -176,17 +163,19 @@
           <div class="col s12 m12">
             <div id="forecast" class="card">
               <div class="card-image">
-                <img src="images/Sensify.jpg">
+                <img src="./images/Sensify.jpg">
               </div>
               <div class="card-content">
                 <p>Sensify is a mobile web application built for you. Listen to music based on your location. Tell us where you are and we will give you a Spotify playlist to listen to. Get a taste of the songs with lyrics provided and enjoy Sensify, the music app that senses where you are!</p>
               </div>
             </div>
           </div>
-        </div>        
+        </div>
       </section>
     </main>
-
+    <footer id="footer">
+      
+    </footer>
     <!-- jQuery if needed -->
     <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>
     
@@ -195,12 +184,8 @@
 
     <!-- Materialize cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-   
 
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- main script -->
     <script src="./script.js"></script>
-</body>
-
+  </body>
 </html>
