connected html pages

--- a/index.html
+++ b/index.html
@@ -31,16 +31,11 @@
         <div id="navBar" class="nav-wrapper">
           <img id="logo" src="./images/logo.png" alt="logo" class="responsive-img">
           <a href="#!" id="brand" class="brand-logo center">Sensify</a>
-          <a href="#" data-target="mobile-demo" class="right sidenav-trigger"><i class="material-icons">menu</i></a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="./aboutus.html">About</a></li>
+          <ul id="navLinks" class="right">
+            <li><a id="about" href="./aboutus.html">About</a></li>
           </ul>
         </div>
       </nav>
-
-      <ul class="sidenav" id="mobile-demo">
-        <li><a href="./aboutus.html">About</a></li>
-      </ul>
     </header>
     <main class="row">
       <section id="playlist" class="col s12 m6 l6">
