--- a/aboutus.html
+++ b/aboutus.html
@@ -39,7 +39,8 @@
  <h1 class= "center">Meet the Team</h1>
 
 
-  <div class="row">
+  <div class= "card-panel">
+  <!-- <div class="row"> -->
     <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
@@ -55,10 +56,7 @@
         </div>
       </div>
     </div>
-  </div>
-
   
-  <div class="row">
     <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
@@ -76,7 +74,56 @@
     </div>
   
 
+<!-- </div> -->
 </div>
+
+
+
+
+
+<main class="card-deck">
+  <section class="card" style="width: 18rem;">
+      <!-- <img class="card-img-top" src="https://www.stockvault.net/data/2016/11/20/216415/preview16.jpg" alt="Card image"> -->
+      <div class="card-body">
+>
+        <hr class="light">
+        <p class="card-text">Since I have not worked on many projects, attached is our first homework assignment.</p>
+        <hr class="light">
+        <!-- <a href="https://daniellehillman.github.io/coderefractor/" target="_blank" class="card-link">Link to Project</a> -->
+
+      </div>
+      
+    </section>
+    <!-- card for project 2  -->
+    <section class="card" style="width: 18rem;">
+      <img class="card-img-top" src="https://www.stockvault.net/data/2016/11/20/216415/preview16.jpg" alt="Card image">
+      <div class="card-body">
+        <h5 class=" card-title card-img-overlay">Project 2</h5>
+        <h6 class="card-subtitle">This will be project 2</h6>
+        <hr class="light">
+        <p class="card-text">Attached will be another project in the future with a link below.</p>
+        <hr class="light">
+        <!-- Will link other projects once I finish them -->
+        <!-- <a href="#" class="card-link">Card link</a> -->
+        
+      </div>
+    </section>
+    <!-- card for project 3  -->
+    <section class="card" style="width: 18rem;">
+      <img class="card-img-top" src="https://www.stockvault.net/data/2016/11/20/216415/preview16.jpg" alt="Card image">
+      <div class="card-body">
+        <h5 class="card-title card-img-overlay">Project 3</h5>
+        <h6 class="card-subtitle">This will be project 3</h6>
+        <hr class="light">
+        <p class="card-text">Attached will be another project in the future with a link below.</p>
+        <hr class="light">
+        <!-- Will link other projects once I finish them -->
+        <!-- <a href="#" class="card-link">Card link</a> -->
+  
+      </div>
+    </section>
+  </main> 
+
 
 </div>
 </div>
