--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
       <!-- Show weather data for the city/current location -->
       <section id="weather" class="col s12 m6 l6 center-align">
-        <h2>Current Weather</h2>
+        <h2 id="Current"></h2>
         <p id="currentCity"></p>
         <div class="row">
           <div class="col s12 m12">
