Moved homepage a little

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="#" data-target="mobile-demo" class="right sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="./aboutus.html">About</a></li>
-          </ul>
+          </ul>a
         </div>
       </nav>
 
@@ -165,17 +165,17 @@
 
       <!-- Show weather data for the city/current location -->
       <section id="weather" class="col s12 m6 l6 center-align">
-        <h2>Current Weather</h2>
+        <h3 class="rightText">Sensify is a mobile web application built for you. Listen to music based on your location. Tell us where you are and we
+        will give you a Spotify playlist to listen to. Get a taste of the songs with lyrics provided and enjoy Sensify, the
+        music app that senses where you are!</h3>
         <p id="currentCity"></p>
         <div class="row">
           <div class="col s12 m12">
             <div id="forecast" class="card">
-              <div class="card-image">
-                <img src="./images/Sensify.jpg">
-              </div>
-              <div class="card-content">
+              
+              <!-- <div class="card-content">
                 <p id="aboutSensify">Sensify is a mobile web application built for you. Listen to music based on your location. Tell us where you are and we will give you a Spotify playlist to listen to. Get a taste of the songs with lyrics provided and enjoy Sensify, the music app that senses where you are!</p>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
